--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,81 @@
-*.code-workspace
-**/__pycache__
+__pycache__/
+*.py[cod]
+*$py.class
+
+*.so
+
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+share/python-wheels/
+*.egg-info/
+*.egg
+MANIFEST
+
+*.manifest
+*.spec
+
+pip-log.txt
+pip-delete-this-directory.txt
+
 *.mo
 *.pot
-*.pyc
 
-docs/
+*.log
+local_settings.py
+db.sqlite3
+
+instance/
+.webassets-cache
+
+.scrapy
+
+target/
+
+.ipynb_checkpoints
+
+profile_default/
+ipython_config.py
+
+celerybeat-schedule
+
+*.sage.py
+
+.env
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
+
+.spyderproject
+.spyproject
+
+.ropeproject
+
+/site
+
+.mypy_cache/
+.dmypy.json
+dmypy.json
+
+.pyre/
+
+*.sublime-project
+*.sublime-workspace
+
+.idea/
 
 .vscode/
 
