[Workflows] Improvements for travis tox, and makefile

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,22 +1,7 @@
-dist: xenial
 language: python
-cache: pip
+python:
+  - "3.8.5"
+script:
+  - python -m compileall ./
 notifications:
   email: false
-
-python:
-- 3.8.1
-env:
-  global:
-    - PIPENV_IGNORE_VIRTUALENVS=1
-
-install:
-- pip install --upgrade pip tox
-
-script:
-- tox
-
-jobs:
-  include:
-    - env: TOXENV=py
-    - env: TOXENV=style
